# Meeting-Atmosphere-MCP

./: README.md  README_zh.md  USER_GUIDE.md  config.py  llm_utils.py  mcp.json  package.json  pyproject.toml  server.py
mcp_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
