[project]
name = "mcp-template"
version = "0.1.0"
description = "A basic MCP template using FastMCP framework"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastmcp>=2.0.0",
    "openai>=2.8.1",
]
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "llm_utils*"]